--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,7 +38,7 @@
             <div class="inset">Places</div>
           </md-list-item>
 
-          <md-list-item md-no-ink href="/dashboard/categories">
+        <!--  <md-list-item md-no-ink href="/dashboard/categories">
             <div class="inset">
               <ng-md-icon icon="label" layout="column"
                 layout-align="start center"></ng-md-icon>
@@ -53,7 +53,7 @@
             </div>
             <div class="inset">Hosts</div>
           </md-list-item>
-
+        -->
           <md-list-item md-no-ink href="/dashboard/users">
             <div class="inset">
               <ng-md-icon icon="people" layout="column"
